Added more tests.

--- a/notebooks/demo_masks.ipynb
+++ b/notebooks/demo_masks.ipynb
@@ -12,7 +12,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-30T08:42:04.750507Z",
+     "start_time": "2023-10-30T08:42:04.734308Z"
+    }
+   },
+   "id": "25464a79650562da"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -40,15 +54,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-29T12:17:31.351132Z",
-     "start_time": "2023-10-29T12:17:31.337109Z"
+     "end_time": "2023-10-30T08:42:05.157261Z",
+     "start_time": "2023-10-30T08:42:05.076427Z"
     }
    },
    "id": "d9cc1809f6ac4960"
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "def init_mask_node_rect(n: int=10, init: str=\"node\"):\n",
@@ -86,41 +100,131 @@
     "    mask = mask.at[0,n-1].set(0.0)\n",
     "    mask = mask.at[1,n-1].set(0.0)\n",
     "    mask = mask.at[2,n-1].set(0.0)\n",
-    "    mask = jnp.pad(mask, pad_width=1)\n",
     "    masks = MaskGrid.init_mask(mask, init)\n",
     "    return masks"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-29T12:56:45.099005Z",
-     "start_time": "2023-10-29T12:56:45.079876Z"
+     "end_time": "2023-10-30T08:42:05.869188Z",
+     "start_time": "2023-10-30T08:42:05.822958Z"
     }
    },
    "id": "2274d64c47cc63c6"
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "outputs": [],
+   "execution_count": 12,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "((0, 0), 0, 1)"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "n = 6\n",
-    "masks = init_mask_node_rect(n, \"node\")\n",
-    "\n",
-    "# n = 10\n",
-    "# masks = init_mask_node_island(n)\n",
-    "# \n",
-    "# n = 6\n",
-    "# masks = init_mask_center_realish(n, \"center\")"
+    "((0,0),) + (0,1)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-29T12:59:01.820092Z",
-     "start_time": "2023-10-29T12:59:01.764478Z"
+     "end_time": "2023-10-30T08:52:23.085305Z",
+     "start_time": "2023-10-30T08:52:23.055697Z"
+    }
+   },
+   "id": "473db011632b2d28"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "# n = 6\n",
+    "# masks = init_mask_node_rect(n, \"node\")\n",
+    "\n",
+    "# n = 10\n",
+    "# masks = init_mask_node_island(n)\n",
+    "# \n",
+    "n = 6\n",
+    "masks = init_mask_center_realish(n, \"center\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-30T08:42:06.902600Z",
+     "start_time": "2023-10-30T08:42:06.820727Z"
     }
    },
    "id": "f1e8823b411d3487"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(7, 7)"
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "masks.center.values_interior.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-30T08:42:43.421273Z",
+     "start_time": "2023-10-30T08:42:43.411796Z"
+    }
+   },
+   "id": "a9941f9290e9641b"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "(5, 7)"
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "masks.node[1:-1].values.shape"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-10-30T08:40:16.775872Z",
+     "start_time": "2023-10-30T08:40:16.759336Z"
+    }
+   },
+   "id": "e1666272e392f01e"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "18add4b46d8597ac"
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "fba6cdbfd97dedcb"
   },
   {
    "cell_type": "markdown",
