--- a/notebooks/demo_masks.ipynb
+++ b/notebooks/demo_masks.ipynb
@@ -12,31 +12,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "outputs": [],
-   "source": [],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-30T08:42:04.750507Z",
-     "start_time": "2023-10-30T08:42:04.734308Z"
-    }
-   },
-   "id": "25464a79650562da"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
    "source": [
     "import autoroot\n",
     "import jax\n",
@@ -53,10 +30,7 @@
    ],
    "metadata": {
     "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-30T08:42:05.157261Z",
-     "start_time": "2023-10-30T08:42:05.076427Z"
-    }
+    "is_executing": true
    },
    "id": "d9cc1809f6ac4960"
   },
@@ -587,9 +561,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "oceanbench",
    "language": "python",
-   "name": "python3"
+   "display_name": "oceanbench"
   },
   "language_info": {
    "codemirror_mode": {
